--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8">
 	<title>San Joaquin Valley Town Hall</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="styles/main.css">
 	<link rel="icon" href="images/favicon.ico">
 	<link rel="stylesheet" href="styles/main.css">
 </head>
@@ -15,11 +16,14 @@
 		<h2>San Joaquin Valley Town Hall</h2>
 		<h3>Celebrating our <em class="large">75</em><sup>th</sup> Year</h3>
 	</header>
+
 	<nav class="navbar">
+        <input type="checkbox" id="menu-btn" role="button">
+        <label for="menu-btn" class="menu-btn"></label>
 		<ul class="menu">
 			<li><a class="current">Home</a></li>
 			<li class="submenu">
-				<a href="#">Speakers<small>&#9660;</small></a>
+				<a href="#">Speakers<small></small></a>
 				<ul class="dropdown">
 					<li><a href="speakers/brancaccio.html">David Brancaccio</a></li>
 					<li><a href="speakers/sorkin.html">Andrew Ross Sorkin</a></li>
@@ -30,7 +34,7 @@
 			<li><a href="#">Luncheons</a></li>
 			<li><a href="#">Tickets</a></li>
 			<li class="submenu">
-				<a href="#">About Us<small>&#9660;</small></a>
+				<a href="#">About Us<small></small></a>
 				<ul class="dropdown">
 					<li><a href="#">Our History</a></li>
 					<li><a href="#">Board of Directors</a></li>
@@ -85,7 +89,7 @@
 		</section>	
 	</main>
 	<footer>
-		<p>&copy; San Joaquin Valley Town Hall, Fresno, CA 93755</p>
+		<p>&copy; Samuel Gutierrez 2025 </p>
 	</footer>
 </body>
 </html>
